--- a/aac-ionic/www/templates/board_factory.html
+++ b/aac-ionic/www/templates/board_factory.html
@@ -30,15 +30,16 @@
        </div>
       </div>
       <div class="col">
-          <div class="boards" ng-click="chosenBoard2($index)" ng-repeat="board in dummyBoards | slice:start:end">
-            <!-- <a href="#/board_factory/sample_edit"> -->
+          <div class="boards" ng-repeat="board in dummyBoards | slice:start:end">
+            <!-- ng-click="chosenBoard2($index)" -->
+            <a href="#/board_factory/sample_edit/{{board.pk}}" ng-click="chosenBoard($index)">
               <!-- <div class="about-circle" ng-if="aboutcircle == true"></div> -->
               <img ng-src="{{board.img_path}}" alt="image" style="width:65%; height:65%; position:relative; z-index:2; margin-bottom:-60px;"\>
 
               <img src="img/new_dev_assets/board_tile_notched_default.svg" style="positon:relative; z-index:0;" alt="board tile">
             
               <p style="position:relative; z-index:3; margin-top:-30px">{{board.name}} </p>
-            <!-- </a> -->
+            </a>
           </div>
           <!-- <br>
           <div class="forward-buttons">
