--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -62,6 +62,19 @@ $dark:                            #444 !default;
   margin-right: -10px;
 }
 
+.yellow-dot{
+  width:10px;
+  height:10px;
+  border-radius:10px;
+  background-color:#FFDB3B;
+  float:left;
+  /*border-style: solid;*/
+  /*border-width: 2px;*/
+  /*color:#B70016;*/
+  margin-top: -6px;
+  margin-left: -5px;
+}
+
 .about-circle{
   background-color: #FFDB3B;
   width:10px;
@@ -175,7 +188,8 @@ input[type="text"]:focus, textarea:focus{
 
 .board-instructions2{
   color: #008485;
-  font-weight: 500;
+  font-weight: 800;
+  font-style:italic;
   margin-bottom: -10px;
   width:90%;
 }
