--- a/aac-ionic/www/templates/sample_edit.html
+++ b/aac-ionic/www/templates/sample_edit.html
@@ -26,8 +26,8 @@
 
       <div class="board-factory-tile-section">
         <div id="newboard2">
-          <h1 class="factory-title">Editing Copy of {{board.title}}<i class="icon ion-help-circled" style="font-size: .6em;"></i></h1>
-          <p class="board-instructions2" ng-show="board.title != 'About Me'"><i class="icon ion-help-circled"></i> Tap a tile to select a Board to edit. Press and hold a Board tile to move it to a different place. Tap the minus sign to remove the tile from the Board.</p>
+          <h1 class="factory-title">Editing Copy of {{board.title}}</h1><div class="about-question"><i class="icon ion-help"></i></div>
+          <p class="board-instructions2" ng-show="board.title != 'About Me'"><i class="icon ion=help"></i> Tap a tile to select a Board to edit. Press and hold a Board tile to move it to a different place. Tap the minus sign to remove the tile from the Board.</p>
           <p class="board-instructions2" ng-show="board.title == 'About Me'" style="margin-bottom:3px;">Tips:</p>
             <ol class="board-instructions2" ng-show="board.title == 'About Me'">
               <li>Tap a tile to change it's symbol.</li>
