--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -3,7 +3,7 @@
         <i class="icon ion-unlocked"></i>
         <!-- <i class="icon ion-locked"></i> -->
         <button class="button button-outline button-calm button-small" id="btn-styling">
-          <a href="/#/settings"><i class="icon ion-gear-b"></i> Settings</a>
+          <i class="icon ion-gear-b"></i><a href="/#/settings"> Settings</a>
         </button>
         <button class="button button-outline button-calm button-small" id="btn-styling">
           <i class="icon ion-grid" id="small-icon"></i><a href="#/board_factory">Board Factory</a>
