--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -258,7 +258,7 @@
 			<div class="col col-67" id="settings-modal" ng-show="step == 6">
 				<ion-list> 
 					<ion-item style="margin-left:5px;margin-top:-6px;width:900px;">
-						<h1 class="centered-title"><strong>About Me Profile</strong></h1>
+						<h1 class="centered-title"><p style="float:left; font-size:.9em; color:#088788;"><i class="icon ion-chevron-left"></i> General</p><strong>About Me Profile</strong></h1>
 					</ion-item>
 				</ion-list>
 
@@ -277,45 +277,59 @@
 					<button class="done-button" style="float:left; margin-top:20px; margin-left:30px;"><p><i class="icon ion-ios-search"></i> Browse...</p></button>
 				</div>
 				<p class="about-content" style="float:left">Nickname
+					<span class="annotation">For example, "Sam"</span>
 					<input type="text">
 				</p>
 				<p class="about-content" style="float:left">Birthday
+					<span class="annotation">For example, "March second"</span>
 					<input type="text">
 				</p>
 				<p class="about-content" style="float:left">Hometown
+					<span class="annotation">For example, "Buffalo"</span>
 					<input type="text">
 				</p>
 				<p class="about-content" style="float:left">Name of best friend
+					<span class="annotation">For example, "Timmy"</span>
 					<input type="text">
 				</p>
 				<p class="about-content" style="float:left">Siblings
+					<span class="annotation">For example, "two little sisters"</span>
 					<input type="text">
 				</p>
 				<p class="about-content" style="float:left">Pets
+					<span class="annotation">For example, "two cats and one hamster"</span>
 					<input type="text">
 				</p>
 				<p class="about-content" style="float:left">Gender
+					<span class="annotation">For example, "girl"</span>
 					<input type="text">
 				</p>
 				<p class="about-content" style="float:left">Age
+					<span class="annotation">For example, "nine"</span>
 					<input type="text">
 				</p>
 				<p class="about-content" style="float:left">Favorite Toy
+					<span class="annotation">For example, "blocks"</span>
 					<input type="text">
 				</p>
 				<p class="about-content" style="float:left">Hobby
+					<span class="annotation">For example, "play video game"</span>
 					<input type="text">
 				</p>
 				<p class="about-content" style="float:left">Favorite sports team
+					<span class="annotation">For example, "Washington Capitals"</span>
 					<input type="text">
 				</p>
 				<p class="about-content" style="float:left">Favorite food
+					<span class="annotation">For example, "hot dogs"</span>
 					<input type="text">
 				</p>
 				<p class="about-content" style="float:left">Favorite ice cream flavor
+					<span class="annotation">For example, "rocky road"</span>
 					<input type="text">
 				</p>
 				<p class="about-content" style="float:left">Favorite color
+					<span class="annotation">For example, "green"</span>
 					<input type="text">
 					<button class="custom-button" style="margin-top:20px;">Save</button>
 				</p>
