--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -271,6 +271,8 @@
 				<p class="about-content">DRAFT TEXT: Fill in the information below to create a board all about your communicator. Fields left blank will not display on the About Me Board. You may also upload an image of your communicator to use as the Boards's symbol.</p>
 
 				<div class="about-symbol-select">
+					<p style="margin-left: 10px; margin-top: 65px; margin-bottom: -70px; font-size:.75em;">About Me</p>
+
 					<img ng-src="img/aac_board_imgs/fakejsonimg/I.png" alt="image" style="width:6%; height:6%; position:relative; z-index:2; margin-bottom:-60px; margin-left:18px; float:left; margin-top:15px;"\>
 
 					<img src="img/new_dev_assets/board_tile_notched_default.svg" alt="board tile" style="float:left; positon:relative; z-index:0;">
