--- a/aac-ionic/www/templates/sample_edit.html
+++ b/aac-ionic/www/templates/sample_edit.html
@@ -101,6 +101,7 @@
   <script id="settings-popover.html" type="text/ng-template">
     <ion-popover-view class="popover-stuff2">
       <ion-content>
+        <p class="closing-x" ng-click="closePopover()">X</p>
         <p>To edit the content of tiles with a yellow dot, go to Settings</p>
         <button class="custom-button"><i class="icon ion-ios-gear"></i> Open Settings</button>
       </ion-content>
