--- a/aac-ionic/www/templates/sample_edit.html
+++ b/aac-ionic/www/templates/sample_edit.html
@@ -3,7 +3,7 @@
     <i class="icon ion-unlocked"></i>
         <!-- <i class="icon ion-locked"></i> -->
     <button class="button button-outline button-calm button-small" id="btn-styling">
-      <a href="/#/settings"><i class="icon ion-gear-b"></i> Settings</a>
+      <a href="#/settings"><i class="icon ion-gear-b"></i> Settings</a>
     </button>
     <button class="button button-outline button-calm button-small" id="selected-btn">
       <i class="icon ion-grid"></i><a href="#/board_factory">Board Factory</a>
@@ -26,7 +26,9 @@
 
       <div class="board-factory-tile-section">
         <div id="newboard2">
-          <h1 class="factory-title">Editing Copy of {{board.title}}<i class="icon ion-help" ng-click="openPopover($event)"></i></h1>
+          <span class="factory-title">Editing Copy of {{board.title}}</span>
+          <i class="icon ion-help" ng-click="openPopover($event)" ng-show="board.title == 'About Me'"></i>
+          <br>
           <!-- <div class="about-question"></div> -->
           <p class="board-instructions2" ng-show="board.title != 'About Me'"><i class="icon ion=help"></i> Tap a tile to select a Board to edit. Press and hold a Board tile to move it to a different place. Tap the minus sign to remove the tile from the Board.</p>
           <p class="board-instructions2" ng-show="board.title == 'About Me'" style="margin-bottom:3px;">Tips:</p>
@@ -48,8 +50,8 @@
             <div class="manual-minus"><p>-</p></div>
             <div class="yellow-dot" ng-show="board.title == 'About Me'"></div>
             <span ng-show="filled_tiles.indexOf(col+row)!=-1">
-              {{board.symbols[col+row].word}}<br>
-              <img src="{{board.symbols[col+row].symbol.image}}" style="width:40px;height:40px; position:relative; z-index:0;">
+              <img src="{{board.symbols[col+row].symbol.image}}" style="width:40px;height:40px; position:relative; z-index:0; margin-bottom:-10px;"><br>
+              {{board.symbols[col+row].word}}
             </span>
           </div>
 
@@ -94,7 +96,7 @@
       </div>
       <p class="edit-subheading">The content of the About Me Board is accessed in your Settings.</p>
       <div class="frame" style="margin-bottom: 15%;">
-        <button class="custom-button"><i class="icon ion-gear-b"></i>Open Settings</button>
+        <a href="#/settings"><button class="custom-button"><i class="icon ion-gear-a"></i> Open Settings</button></a>
       </div>
       <button class="custom-button">Save</button>
     </div>
@@ -106,7 +108,7 @@
       <ion-content>
         <p class="closing-x" ng-click="closePopover()">X</p>
         <p>To edit the content of tiles with a yellow dot, go to Settings</p>
-        <button class="custom-button"><i class="icon ion-ios-gear"></i> Open Settings</button>
+        <a href="#/settings"><button class="custom-button"><i class="icon ion-gear-a"></i> Open Settings</button></a>
       </ion-content>
     </ion-popover-view>
   </script>
