--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -1,7 +1,6 @@
     <ion-header-bar class="bar-dark">
       <div class="buttonsdiv">
         <i class="icon ion-unlocked"></i>
-        <!-- <i class="icon ion-locked"></i> -->
         <button class="button button-outline button-calm button-small" id="btn-styling">
           <a href="#/settings"><i class="icon ion-gear-b"></i> Settings</a>
         </button>
@@ -12,7 +11,6 @@
         </button>
 
         <button class="button button-outline button-calm button-small" id="btn-styling" style="margin-right:10px;" ng-click="activeHide()" ng-class="class">
-          <!-- <i class="icon ion-eye-disabled"></i>  -->
           <i class="icon ion-eye-disabled"></i>Hide Tiles
 
           <div class="toggle-content" style="float:right">
@@ -28,7 +26,6 @@
 
         <button class="done-button" ng-click="hideDone()" ng-if="hide"><p><i class="icon ion-checkmark-round"></i><a href="#/home">DONE</a></p>
         </button>
-        <!-- <button class="done-button"><p><a href="#/home">DONE</a></p></div> -->
       </div>
     </ion-header-bar>
 
@@ -80,24 +77,17 @@
                 </span>
               </div>
             </div>
-            <!-- <div class="col col-2" style="float:left;"></div> -->
 
             <div class="col col-40" id="board-section" style="margin-top:-43px;">
               <div class="boards" ng-repeat="board in dummyBoards | slice:start:end" ng-click="chosenBoard($index)">
-                <!-- <div class="triangle-topright"></div> -->
-                <!-- <div class="boardline"></div> -->
-                <!-- <div class="top-content" style="position: relative; z-index:2;"> -->
-                  <img ng-src="{{board.img_path}}" alt="image" style="width:65%; height:65%; position:relative; z-index:2; margin-bottom:-60px;"\>
+                  <p style="position:fixed; z-index:3; margin-top:25px; margin-left:15px;" ng-model="titleLimit">{{board.name | limitTo: titleLimit}} </p>
 
-                  <img src="img/new_dev_assets/board_tile_notched_default.svg" style="positon:relative; z-index:0;" alt="board tile">
-          
-                  <p style="position:relative; z-index:3; margin-top:-30px">{{board.name}} </p>
-                <!-- </div> -->
+                  <img ng-src="{{board.img_path}}" alt="image" style="width:65%; height:65%; position:relative; z-index:2; margin-bottom:-70px;"\>
+
+                  <img src="img/new_dev_assets/board_tile_notched_default_1.svg" style="positon:relative; z-index:0;" alt="board tile">
               </div>
             </div>
           </div>
-            <!-- <img src="img/AAC_assets/tile_tapped_slice.png"/> -->
-          <!-- </div> -->
         </div>
 
 <!-- Bottom function buttons -->
