--- a/aac-ionic/www/templates/sample_edit.html
+++ b/aac-ionic/www/templates/sample_edit.html
@@ -50,8 +50,8 @@
             <div class="manual-minus"><p>-</p></div>
             <div class="yellow-dot" ng-show="board.title == 'About Me'"></div>
             <span ng-show="filled_tiles.indexOf(col+row)!=-1">
-              <img src="{{board.symbols[col+row].symbol.image}}" style="width:40px;height:40px; position:relative; z-index:0; margin-bottom:-10px;"><br>
-              {{board.symbols[col+row].word}}
+              <p>{{board.symbols[col+row].word | limitTo: titleLimit}} <span ng-show="board.symbols[col+row].word.length > titleLimit">...</span></p>
+              <img src="{{board.symbols[col+row].symbol.image}}" style="width:40px;height:40px; position:relative; z-index:0; margin-bottom:-10px;">
             </span>
           </div>
 
