--- a/aac-ionic/www/templates/board_factory.html
+++ b/aac-ionic/www/templates/board_factory.html
@@ -8,11 +8,11 @@
     <button class="button button-outline button-calm button-small" id="selected-btn">
       <i class="icon ion-grid"></i><a href="#/board_factory">Board Factory</a>
       <br>
-      <p class="show-hide-label">*Requires Wifi</p>
+      <p class="show-hide-label" style="color:white;">*Requires Wifi</p>
     </button>
     <button class="button button-outline button-calm button-small" id="btn-styling" style="margin-right:10px;">
           <!-- <i class="icon ion-eye-disabled"></i>  -->
-      <i class="icon ion-eye-disabled"></i>Hide Tiles
+      <i class="icon ion-eye-disabled"></i><span class="hide-label"> Hide Tiles</span>
     </button>
 
     <button class="done-button"><p><i class="icon ion-checkmark-round"></i><a href="#/home">DONE</a></p></button>
