--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -5,13 +5,13 @@
           <a href="#/settings"><i class="icon ion-gear-b"></i> Settings</a>
         </button>
         <button class="button button-outline button-calm button-small" id="btn-styling">
-          <i class="icon ion-grid" id="small-icon"></i><a href="#/board_factory">Board Factory</a>
+          <i class="icon ion-grid"></i><a href="#/board_factory"> Board Factory</a>
           <br>
           <p class="show-hide-label">*Requires Wifi</p>
         </button>
 
         <button class="button button-outline button-calm button-small" id="btn-styling" style="margin-right:10px;" ng-click="activeHide()" ng-class="class">
-          <i class="icon ion-eye-disabled"></i>Hide Tiles
+          <i class="icon ion-eye-disabled"></i> <span class="hide-label">Hide Tiles</span>
 
           <div class="toggle-content" style="float:right">
             <label class="toggle toggle-dark-green toggle-small" ng-if="hide">
