--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -12,7 +12,7 @@
         </button>
         <button class="button button-outline button-calm button-small" id="btn-styling" style="margin-right:10px;">
           <!-- <i class="icon ion-eye-disabled"></i>  -->
-          <i class="icon ion-eye-disabled"></i>Hide Tiles
+          <i class="icon ion-eye-disabled"></i><span class="hide-label">Hide Tiles</span>
         </button>
 
         <button class="done-button"><p><i class="icon ion-checkmark-round"></i><a href="#/home">DONE</a></p></div>
