reverted the directive back to something that kind of works

--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -87,7 +87,7 @@
             <div class="col col-60" id="tile-section">
               <div class="tile-section-border">
                 <span ng-repeat="row in rows">
-                  <div class="tile" ng-repeat="col in columns" ng-click="clickTile(board.symbols[col+row])" ng-class="{lightBlue:board.symbols[col+row]==selectedIndex, greyEdit:board.symbols[col+row] == selectedIndex2}";>
+                  <div class="tile" ng-repeat="col in columns" ng-click="clickTile(board.symbols[col+row]); hideThis()" ng-class="{lightBlue:board.symbols[col+row]==selectedIndex, greyEdit:board.symbols[col+row] == selectedIndex2}";>
                     <!-- <div class="tile greyEdit" ng-show="{{$scope.greyedTiles.indexOf(row+col) > -1}}">{{board.symbols[col+row].word}}</div> -->
                     <div class="hide-symbol" ng-show="editable">
                       <p><i class="icon ion-eye-disabled"></i></p>
