--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -38,7 +38,7 @@ $dark:                            #444 !default;
   z-index: 7;
   text-align: center;
   margin-left: -5px;
-  margin-top: -70px;
+  margin-top: -71px;
 }
 
 .top-button{
@@ -90,6 +90,20 @@ $dark:                            #444 !default;
   font-size:1.25em;
   position: relative;
   z-index: 5;
+}
+
+.hidden-symbol{
+  width:18px;
+  height:18px;
+  border-radius:10px;
+  background-color:white;
+  float:right;
+  color:#77CE20;
+  margin-top: -74px;
+  margin-right: -7px;
+  font-size:1.25em;
+  position: relative;
+  z-index: 9;
 }
 
 .hide-symbol2{
