--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -41,6 +41,22 @@ $dark:                            #444 !default;
   margin-top: -71px;
 }
 
+.greyEdit2{
+  background:rgba(0, 0, 0, .4);
+  padding: .5%;
+  border: 2px solid #979797;
+  border-radius: 12px;
+  height: 90px;
+  width: 77px;
+  font-size: .75em;
+  float: left;
+  position: relative;
+  z-index: 7;
+  text-align: center;
+  margin-left: -10px;
+  margin-top: -31px;
+}
+
 .top-button{
   position:absolute; 
   margin:42% 30% 30% 39%;
@@ -101,6 +117,20 @@ $dark:                            #444 !default;
   color:#77CE20;
   margin-top: -74px;
   margin-right: -7px;
+  font-size:1.25em;
+  position: relative;
+  z-index: 9;
+}
+
+.hidden-symbol2{
+  width:18px;
+  height:18px;
+  border-radius:10px;
+  background-color:white;
+  float:right;
+  color:#77CE20;
+  margin-top: -97px;
+  margin-right: -15px;
   font-size:1.25em;
   position: relative;
   z-index: 9;
@@ -610,7 +640,10 @@ button.button-outline.button-calm.button-small.selected-btn2{
   margin-left: 5px;
   float: left;
   border: 2px solid #979797;
-  text-align: center; }
+  text-align: center; 
+  position: relative;
+  z-index:3;
+}
 
 .word-builder-input {
   width: 800px;
