--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -39,31 +39,31 @@
     <ion-view view-title="AAC" class="pane">
       <ion-content class= "appBody" id="bodyBack">
         <div class="row" id="regularRow">
-          <div class="col col-10" id="regularRowBod">
+          <div class="col col-10" id="regularRowBod" hiding>
             <img src="img/AAC_assets/avatar_default.png"/>
 
-            <div class="regulars">
+            <div class="regulars" hiding-large>
               <div class="hide-symbol-common" ng-show="editable">
                 <p><i class="icon ion-eye-disabled"></i></p>
               </div>
               Yes
             </div>
 
-            <div class="regulars">
+            <div class="regulars" hiding-large>
               <div class="hide-symbol-common" ng-show="editable">
                 <p><i class="icon ion-eye-disabled"></i></p>
               </div>
               No
             </div>
 
-            <div class="regulars">
+            <div class="regulars" hiding-large>
               <div class="hide-symbol-common" ng-show="editable">
                 <p><i class="icon ion-eye-disabled"></i></p>
               </div>
               Hold On
             </div>
 
-            <div class="regulars">
+            <div class="regulars" hiding-large>
               <div class="hide-symbol-common" ng-show="editable">
                 <p><i class="icon ion-eye-disabled"></i></p>
               </div>
@@ -87,7 +87,7 @@
             <div class="col col-60" id="tile-section">
               <div class="tile-section-border">
                 <span ng-repeat="row in rows">
-                  <div class="tile" ng-repeat="col in columns" ng-click="clickTile(board.symbols[col+row]); hideThis()" ng-class="{lightBlue:board.symbols[col+row]==selectedIndex, greyEdit:board.symbols[col+row] == selectedIndex2}";>
+                  <div class="tile" ng-repeat="col in columns" ng-click="clickTile(board.symbols[col+row])" ng-class="{lightBlue:board.symbols[col+row]==selectedIndex, greyEdit:board.symbols[col+row] == selectedIndex2}";>
                     <!-- <div class="tile greyEdit" ng-show="{{$scope.greyedTiles.indexOf(row+col) > -1}}">{{board.symbols[col+row].word}}</div> -->
                     <div class="hide-symbol" ng-show="editable">
                       <p><i class="icon ion-eye-disabled"></i></p>
