--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -39,7 +39,7 @@
     <ion-view view-title="AAC" class="pane">
       <ion-content class= "appBody" id="bodyBack">
         <div class="row" id="regularRow">
-          <div class="col col-10" id="regularRowBod" hiding>
+          <div class="col col-10" id="regularRowBod">
             <img src="img/AAC_assets/avatar_default.png"/>
 
             <div class="regulars" hiding-large>
