--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -660,37 +660,38 @@ button.button-outline.button-calm.button-small.selected-btn2{
   float: right;
   margin: -4px;
   padding: 0;
-  z-index: 3; }
+  z-index: 3; 
+}
 
-  a:active {
-    background color:#579215;
-    border-color:#579215;
-  }
+a:active {
+  background color:#579215;
+  border-color:#579215;
+}
 
-  #button-circle{
-    width:75px;
-    height:75px;
-    background-color: #008485;
-    border-radius: 37.5px;
-    float:left;
-    margin-left:20px;
-  }
+#button-circle{
+  width:75px;
+  height:75px;
+  background-color: #008485;
+  border-radius: 37.5px;
+  float:left;
+  margin-left:20px;
+}
 
-  .button-circle{
-    width:75px;
-    height:75px;
-    background-color: #008485;
-    border-radius: 37.5px;
-    float:left;
-    margin-left:20px;
-  }
+.button-circle{
+  width:75px;
+  height:75px;
+  background-color: #008485;
+  border-radius: 37.5px;
+  float:left;
+  margin-left:20px;
+}
 
-  #button-circle2{
-    width:75px;
-    height:75px;
-    background-color: #008485;
-    border-radius: 37.5px;
-  }
+#button-circle2{
+  width:75px;
+  height:75px;
+  background-color: #008485;
+  border-radius: 37.5px;
+}
 
 #btn-styling {
   border-radius: 0;
@@ -736,7 +737,7 @@ button.button-outline.button-calm.button-small.selected-btn2{
 #board-section {
   margin-top: -20px;
   float: left;
-  margin-left:-30px;
+  /*margin-left:-30px;*/
   /*margin-right:-20px;*/
 }
 
