--- a/aac-ionic/www/templates/search.html
+++ b/aac-ionic/www/templates/search.html
@@ -1,7 +1,12 @@
-<div class="modal-header clearfix">
-  <h1 class="modal-title pull-left">Add Words or Phrases</h1>
-</div>
+<!-- <div class="modal-header clearfix">
+  <h1 class="modal-title">Add Words or Phrases</h1>
+</div> -->
 
 <div class="modal-body clearfix">
-	<p>This is a sentence</p>
+	<input type="text" id="search-box" placeholder="Start typing to search">
+	<div class="close-box">
+		<i class="icon ion-close-round search-close" style="float:right" ng-click="cancel(e)"></i>
+	</div>
+	<br>
+	<hr class="search-rule">
 </div>
