--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -36,7 +36,7 @@
       <ion-content class= "appBody" id="bodyBack">
         <div class="row" id="regularRow">
           <div class="col col-10" id="regularRowBod">
-            <img src="img/AAC_assets/avatar_default.png"/>
+            <img ng-click="speakText(text)" src="img/AAC_assets/avatar_default.png"/>
 
             <div class="regulars">
               Yes
