changed home to main

--- a/aac-ionic/www/templates/board_factory_new.html
+++ b/aac-ionic/www/templates/board_factory_new.html
@@ -15,7 +15,7 @@
       <p class="show-hide-label">*Requires Wifi</p>
     </button>
 
-    <button class="done-button"><p><a href="#/home">DONE</a></p></div>
+    <button class="done-button"><p><a href="#/main">DONE</a></p></div>
   </div>
 </ion-header-bar>
 
