--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -15,7 +15,8 @@
           <!-- <i class="icon ion-eye-disabled"></i>  -->
           <i class="icon ion-eye-disabled"></i>Hide Tiles
 
-          <div class="toggle-content" style="float:right">
+          <d
+          iv class="toggle-content" style="float:right">
             <label class="toggle toggle-dark-green toggle-small" ng-if="hide">
               <input type="checkbox">
               <div class="track" id="track-color">
@@ -26,7 +27,7 @@
           </div>
         </button>
 
-        <button class="done-button" ng-click="hideDone()" ng-if="hide"><p><i class="icon ion-checkmark-round"></i><a href="#/home">DONE</a></p>
+        <button class="done-button" ng-click="hideDone()" ng-if="hide"><p><i class="icon ion-checkmark-round"></i><a href="#/main">DONE</a></p>
         </button>
         <!-- <button class="done-button"><p><a href="#/home">DONE</a></p></div> -->
       </div>
