changed home to main

--- a/aac-ionic/www/templates/board_factory.html
+++ b/aac-ionic/www/templates/board_factory.html
@@ -15,7 +15,7 @@
       <i class="icon ion-eye-disabled"></i><span class="hide-label"> Hide Tiles</span>
     </button>
 
-    <button class="done-button"><p><i class="icon ion-checkmark-round"></i><a href="#/home">DONE</a></p></button>
+    <button class="done-button"><p><i class="icon ion-checkmark-round"></i><a href="#/main">DONE</a></p></button>
   </div>
 </ion-header-bar>
 
