--- a/aac-ionic/www/templates/sample_edit.html
+++ b/aac-ionic/www/templates/sample_edit.html
@@ -14,7 +14,7 @@
           <!-- <i class="icon ion-eye-disabled"></i>  -->
       <i class="icon ion-eye-disabled"></i><a href=";javascript"><span class="hide-label">Hide Tiles</span></a>
     </button>
-    <button class="done-button"><p><i class="icon ion-checkmark-round"></i><a href="#/home">DONE</a></p></div>
+    <button class="done-button"><p><i class="icon ion-checkmark-round"></i><a href="#/main">DONE</a></p></div>
   </div>
 </ion-header-bar>
 
