--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -15,7 +15,7 @@
           <i class="icon ion-eye-disabled"></i><span class="hide-label">Hide Tiles</span>
         </button>
 
-        <button class="done-button"><p><i class="icon ion-checkmark-round"></i><a href="#/main">DONE</a></p></div>
+        <button class="done-button"><p><i class="icon ion-checkmark-round"></i><a href="#/home">DONE</a></p></div>
       </div>
  </ion-header-bar>
 
