--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -139,6 +139,8 @@
 					Set Pin
 					<span class="warning-text">INSERT DEVELOPER MAGIC HERE</span>
 				</div>
+
+				<button class="testing-sass">Working?</button>
 			</div>
 
 <!-- Synthetic Voice Panel -->
