--- a/aac-ionic/www/templates/home.html
+++ b/aac-ionic/www/templates/home.html
@@ -124,6 +124,8 @@
             <img ng-click="lastSet($index)" src="img/AAC_assets/left.png" style="margin-left:50px;"/>
             <img ng-click="nextSet($index)" src="img/AAC_assets/right.png" style="margin-left:30px;"/>
           </div>
+
+          <button class="tested-button">This</button>
         </div>
       </ion-content>
     </ion-view>
