fixed Sass issues

--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -206,7 +206,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
   transform: rotate(46deg);
 }
 
-.toggle-small 
+.toggle-small{ 
 	  .handle {
 	  top: 5px;
 	  left: 4px;
